Fixed hamburger styling on small screen and z-index
- Fixed styling on hamburger, so it stayed in the header
- Fixed the z-index on the nav, so that it appears above leaflet maps

--- a/src/style.scss
+++ b/src/style.scss
@@ -123,7 +123,7 @@ header.rdHeader {
 
         nav {
           display: block;
-          z-index: 10;
+          z-index: 1000;
         }
       }
     }
@@ -133,6 +133,10 @@ header.rdHeader {
 @media(max-width: 500px) {
   header.rdHeader {
     padding: $headerVPadding/2 $headerHPadding/2;
+
+    div.nav {
+      margin: 5px;
+    }
 
     > .logo-text {
       display: none;
